style.css
body {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    margin: 0;
    padding: 0;
    background-color: #dce1de;
}

.calculator-body {
    display: grid;
    overflow-x: hidden;
    background-color: #1b595a;
    grid-template-rows: 100px repeat(5, 1fr);
    grid-template-columns: repeat(4, 1fr);
    min-width: 310px;
    height: 510px;
    border-radius: 15px;
    box-shadow: 3px 2px 2px rgba(29, 62, 48, 0.664);
}

.calculator-screen {
    background-color: #151515;
    color: rgb(255, 255, 255);
    grid-column-start: 1;
    grid-column-end: 5;
    border-radius: 15px;
    margin: 8px 8px 0 8px;
}

p.expression {
    font-family: "Bebas Neue", serif;
    position: relative;
    overflow-x: auto;
    text-align: right;
    color: #151515;
    font-size: 20px;
    margin: 0;
    padding: 5px 18px 0px;
}

p.result {
    font-family: "Bebas Neue", serif;
    overflow-x: auto;
    font-size: 35px;
    position: relative;
    text-align: right;
    padding: 0px 15px;
    margin-top: 15px;
}

button {
    font-family: "Bebas Neue", serif;
    background-color: #8dbb92;
    color: #dce1de;
    font-size: 25px;
    border-radius: 100%;
    margin: 6px;
    text-shadow: 2px 2px rgba(0, 0, 0, 0.397);
}

button.equal {
    border-radius: 100px;
}

button.operator, .equal, .clear, .delete, .plus-minus{
    background-color: #1f2421;
}

button.delete svg {
    scale: 1.2;
}

button.operator, .decimal {
    font-size: 32px;
}

button.equal {
    grid-column-start: 3;
    grid-column-end: 5;
}

button:active {
    background-color: #1f2421;
    color: #dce1de;
}

